--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==4.0.1
-gunicorn==20.1.0
-Pillow==9.0.0
-environs==9.4.0
-dj-database-url==0.5.0
+Django>=4.0.2
+gunicorn>=20.1.0
+Pillow>=9.0.0
+environs>=9.4.0
+dj-database-url>=0.5.0
